Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87197

MouseArea containsMouse value incorrect after visibility changes

    XMLWordPrintable

Details

    • ba1246c543118515ea244787f3d7f9c1133ccf0f (qt/qtdeclarative/dev) f853db24bd29343efa8694008a931c95c37c2a80 (qt/qtdeclarative/6.1) 4f2cc0d258244c05d5b5419ce98fdeebe847caf9 (qt/qtdeclarative/6.0) 4a2548e312 (qt/tqtc-qtdeclarative/5.15-opensource)

    Description

      Toggling MouseArea visibility while mouse cursor is hovered on top of it seems to cause containsMouse property to get incorrectly "true" value when mouse cursor is later moved away from the MouseArea.

      Steps to reproduce the issue:

      1. Run the attached project
      2. Wait for the MouseArea visibility to be toggled false by the timer (2sec interval)
      3. Move mouse cursor on top of the MouseArea (=Anywhere on the window) before visibility is toggled back to true and keep the cursor on top of the window until MouseArea visibility is true
      4. Move mouse cursor away from the window while the visibility is still true and keep it outside the window.

      Note: until now the containsMouse value is correct

      1. The next time MouseArea visibility is turned "true" by the timer the containsMouse value will also be true even though the mouse cursor is no longer on top of the MouseArea. The containsMouse will keep toggling with the visibility.

      Attachments

        For Gerrit Dashboard: QTBUG-87197
        # Subject Branch Project Status CR V

        Activity

          People

            vhilshei Volker Hilsheimer
            miikapernu Miika Pernu
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: