tests/auto/quick/qquickmousearea/data/containsMouse.qml
@@ -1,0 +1,14 @@
+import QtQuick
+
+Rectangle {
+    width: 200
+    height: 200
+    visible: true
+    MouseArea {
+        id: mouseArea
+        objectName: "mouseArea"
+        anchors.fill: parent
+        hoverEnabled: true
+        visible: false
+    }
+}
